fix overflowing time

--- a/sass/parts/_post.scss
+++ b/sass/parts/_post.scss
@@ -7,7 +7,7 @@
 		line-height: 2;
 		font-size: 0.9em;
 		color: $color-gray02;
-		width: 170px;
+		//width: 170px;
 		@media screen and (max-width: 800px){
 			margin-top: 15px;
 			position: static;
